--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,12 +1,38 @@
-.header {
-  background: #eee;
+.App {
+  text-align: center;
 }
 
-.header a {
-  margin-left: 20px;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
 
-.main {
-  padding: 10px;
-  background: #ccc;
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: blueviolet;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: darkred;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
