--- a/client/src/components/CustomNavbar/index.scss
+++ b/client/src/components/CustomNavbar/index.scss
@@ -13,7 +13,7 @@
 
 
 .nav-link {
-  color:darkslateblue !important;
+  color:darkviolet !important;
   background-color:darkgrey;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -30,6 +30,7 @@
   sans-serif;
   font-weight: bolder;
   border-radius: 4px;
+  min-width: 80px;
 }
 
 .custom-dropdown {
@@ -39,7 +40,7 @@
 .nav-link:hover,
 .nav-link:focus {
   background-color:darkgray;
-  color:blue !important;
+  color:slateblue !important;
   border-radius: 4px;
 }
 
