--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,8 +6,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: #22354d;
-  background-color: darkgray;
+  background-color:antiquewhite;
 }
 
 code {
