--- a/client/src/components/CustomNavbar/index.scss
+++ b/client/src/components/CustomNavbar/index.scss
@@ -9,12 +9,17 @@
     padding-left: 0.75em;
     padding-right: 0.75em;
     border-radius: 6px;
+    color:darkslateblue !important;
   }
 
+  .navbar-brand:hover {
+    background-color: black;
+    color:darkviolet !important;
+  }
 
 .nav-link {
   color:darkviolet !important;
-  background-color:darkgrey;
+  background-color:black;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
@@ -24,7 +29,7 @@
 
 .navitem-style {
   color:darkslateblue !important;
-  background-color:darkgrey;
+  background-color:black;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
@@ -39,7 +44,7 @@
 
 .nav-link:hover,
 .nav-link:focus {
-  background-color:darkgray;
+  background-color:darkviolet;
   color:slateblue !important;
   border-radius: 4px;
 }
