--- a/client/src/pages/index.scss
+++ b/client/src/pages/index.scss
@@ -19,8 +19,8 @@ div {
 }
 
 .heading {
-    background-color:darkgrey;
-    color:antiquewhite;
-    padding: 0.5em 1.0em 0.5em 1.0em;
+    background-color: black;
+    color:darkgray;
+    padding: 0.50em 1.0em 0.50em 1.0em;
 }
 
