Add multiple bg images. Add copyright to footer.

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -14,6 +14,16 @@
   background-repeat: repeat-x;
 }
 
+.bg-image-03 {
+  background-image: url('/images/banner-background-03.png');
+  background-repeat: repeat-x;
+}
+
+.bg-image-04 {
+  background-image: url('/images/banner-background-04.png');
+  background-repeat: repeat-x;
+}
+
 .footer {
   margin-top: 2em;
   padding-top: 1em;
