--- a/client/src/components/BlogPost/index.scss
+++ b/client/src/components/BlogPost/index.scss
@@ -1,24 +1,66 @@
 @import "~bootstrap/scss/bootstrap";
 
-.brand-text {
-    margin-left: 4rem;
-    margin-top: -3.2rem;
-    font-weight: 700;
-  }
-  .nav-link {
-    margin-left: 20px;
-    margin-right: 20px;
-    padding-left: 10px;
-    padding-right: 10px;
-    text-align: center;
-    border: 2px solid transparent;
-    border-radius: 8px;
-  }
-  .nav-link:hover,
-  .nav-link:focus {
-    background-color: #606266;
-    color: #212529 !important;
-    border-radius: 4px;
-  }
+@import "~bootstrap/scss/bootstrap";
 
-  
+.blog-entry {
+  color:antiquewhite;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+  //font-weight: bolder;
+  border-radius: 4px;
+  height: 32px;
+  color: darkviolet;
+}
+
+.blog-title {
+  color:black;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+  font-weight: bolder;
+  border-radius: 4px;
+  min-height: 24px;
+}
+
+.blog-content {
+  color:black;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+  //font-weight: bolder;
+  border-radius: 4px;
+}
+
+a {
+  text-decoration: none;
+  padding: 2px;
+}
+
+a:link {
+  color:darkslateblue;
+}
+
+a:visited {
+
+}
+
+a:focus {
+  color:crimson;
+
+}
+
+a:hover {
+  color:darkslateblue;
+  background-color:antiquewhite;
+  border-radius: 2px;
+}
+
+a:active {
+  color:crimson;
+}
+
+.score-link {
+  color:darkslateblue !important;
+  text-decoration: none;
+}
