working site with random image rotation.

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -9,8 +9,8 @@
 }
 
 
-.bg-image {
-  background-image: url('/images/banner-background-03.png');
+.bg-image-01 {
+  background-image: url('/images/banner-background-01.png');
   background-repeat: repeat-x;
 }
 
@@ -43,6 +43,17 @@
   background-image: url('/images/banner-background-07.png');
   background-repeat: repeat-x;
 }
+
+.bg-image-08 {
+  background-image: url('/images/banner-background-08.png');
+  background-repeat: repeat-x;
+}
+
+.bg-image-09 {
+  background-image: url('/images/banner-background-09.png');
+  background-repeat: repeat-x;
+}
+
 .footer {
   margin-top: 2em;
   padding-top: 1em;
