--- a/client/src/components/EventItem/index.scss
+++ b/client/src/components/EventItem/index.scss
@@ -1,8 +1,6 @@
 @import "~bootstrap/scss/bootstrap";
 
-@import "~bootstrap/scss/bootstrap";
-
-.blog-entry {
+.event-entry {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
@@ -11,22 +9,23 @@
   border-radius: 8px;
 }
 
-.blog-title {
+.event-title {
   color:black;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
   font-weight: bolder;
-  min-height: 12px;
-  padding-top: 1em;
+  min-height: 1em;
+  padding-top: 4px;
   padding-left: 1em;
 }
 
-.blog-content {
+.event-content {
   color:black;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
+  margin-top: 1em;
   margin-right: 1em;
   margin-left: 1em;
 }
