--- a/client/src/components/BlogPost/index.scss
+++ b/client/src/components/BlogPost/index.scss
@@ -6,8 +6,7 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
-  background-color: rgba(180, 175, 175, 0.918);
-  //font-weight: bolder;
+  background-color: rgba(187, 194, 199, 0.918);  //font-weight: bolder;
   border-radius: 8px;
 }
 
@@ -18,8 +17,9 @@
   sans-serif;
   font-weight: bolder;
   min-height: 12px;
-  padding-top: 1em;
+  padding-top: 0.5em;
   padding-left: 1em;
+  padding-bottom: 0.5em;
 }
 
 .blog-content {
@@ -27,6 +27,7 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
+  margin-top: 0.5em;
   margin-right: 1em;
   margin-left: 1em;
 }
@@ -38,28 +39,4 @@ a {
 
 a:link {
   color:darkslateblue;
-}
-
-a:visited {
-
-}
-
-a:focus {
-  color:crimson;
-
-}
-
-a:hover {
-  color:darkslateblue;
-  background-color:antiquewhite;
-  border-radius: 2px;
-}
-
-a:active {
-  color:crimson;
-}
-
-.score-link {
-  color:darkslateblue !important;
-  text-decoration: none;
 }
