--- a/client/src/components/EventItem/index.scss
+++ b/client/src/components/EventItem/index.scss
@@ -1,11 +1,12 @@
 @import "~bootstrap/scss/bootstrap";
 
-.event-entry {
+.event-item {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
-  background-color: rgba(180, 175, 175, 0.918);
+  background-color: rgba(187, 194, 199, 0.918);
   //font-weight: bolder;
+  margin-bottom: 0.5em;
   border-radius: 8px;
 }
 
@@ -16,7 +17,7 @@
   sans-serif;
   font-weight: bolder;
   min-height: 1em;
-  padding-top: 4px;
+  padding-top: 0.5em;
   padding-left: 1em;
 }
 
@@ -25,9 +26,10 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
-  margin-top: 1em;
-  margin-right: 1em;
-  margin-left: 1em;
+  padding-top: 1em;
+  padding-right: 1em;
+  padding-left: 1em;
+  padding-bottom: 1em;
 }
 
 a {
