--- a/client/src/components/RandomMelody/index.scss
+++ b/client/src/components/RandomMelody/index.scss
@@ -1,14 +1,7 @@
 @import "~bootstrap/scss/bootstrap";
 
-.repo-item {
-  color:antiquewhite;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  sans-serif;
-  //font-weight: bolder;
-  border-radius: 4px;
-  height: 32px;
-  color: darkviolet;
+.rendered-melody {
+  background-color: whitesmoke;
 }
 
 a {
@@ -37,9 +30,4 @@ a:hover {
 
 a:active {
   color:crimson;
-}
-
-.score-link {
-  color:darkslateblue !important;
-  text-decoration: none;
 }
