--- a/client/src/pages/index.scss
+++ b/client/src/pages/index.scss
@@ -18,9 +18,18 @@ div {
     margin-top: 4px;
 }
 
+.jumbotron {
+    min-height: 200px;
+}
+
 .heading {
     background-color: black;
     color:darkgray;
     padding: 0.50em 1.0em 0.50em 1.0em;
+}
+
+.heading-hidden {
+    z-index: -1;
+    padding: 1.0em 1.0em 1.0em 1.0em;
 }
 
