--- a/client/src/components/CustomNavbar/index.scss
+++ b/client/src/components/CustomNavbar/index.scss
@@ -19,7 +19,7 @@
 
 .nav-link {
   color:darkviolet !important;
-  background-color:black;
+  background-color:beige;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
@@ -29,7 +29,7 @@
 
 .navitem-style {
   color:darkslateblue !important;
-  background-color:black;
+  background-color: rgba(229, 231, 233, 0.918);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
