--- a/client/src/pages/index.scss
+++ b/client/src/pages/index.scss
@@ -35,3 +35,9 @@ div {
     padding: 1.0em 1.0em 1.0em 1.0em;
 }
 
+.jumbotron {
+    padding: 2rem 1rem;
+    margin-bottom: 2rem;
+    background-color: #e9ecef;
+    border-radius: .3rem;
+}
