Integrate mongo and mongo Express.

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -45,11 +45,11 @@
   min-height: 240px;
 }
 
-.bg-image-04 {
+/* .bg-image-04 {
   background-image: url('/images/banner-background-04.png');
   background-repeat: repeat-x;
   min-height: 240px;
-}
+} */
 
 .bg-image-05 {
   background-image: url('/images/banner-background-05.png');
